--- a/styles.css
+++ b/styles.css
@@ -65,14 +65,14 @@ h2 {
     margin: 0;
     padding-top: 50px;
     padding-bottom: 50px;
-    align-items: flex-start;
+    align-items: center;
     gap: 20px;
     
 }
 
 .content-one img {
     width: 300px;
-    height: 200px;
+    height: auto;
     flex: 1;
 }
 
