--- a/styles.css
+++ b/styles.css
@@ -83,10 +83,19 @@ h2 {
 
 .content-two {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .img-container {
     display: flex;
+    gap: 50px;
+}
+
+.info {
+    padding: 0;
+    max-width: 150px;
 }
 
 .content-three {
@@ -104,6 +113,6 @@ h2 {
 }
 
 img {
-    width: 100px;
-    height: auto;
+    width: 150px;
+    height: 150px;
 }
