--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,15 @@ h2 {
     font-weight: light;
     font-style: italic;
     color: #1f2937;
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+.quotee {
+    text-align: right;
+    font-size: 24px;
+    font-weight: bold;
+    font-style: normal;
 }
 
 .content-four {
