--- a/styles.css
+++ b/styles.css
@@ -117,8 +117,28 @@ h2 {
 
 .content-four {
     background-color: #3882f6;
-
+    margin: 75px auto;
+    width: 700px;
+    border-radius: 5px;
+    color: #f9faf8;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 75px;
+}
+
+.content-four div, .content-four p {
+    padding: 0;
+    margin: 0;
+}
+
+.content-four button {
+    border: 2px solid #f9faf8;
+}
+
+.bold-p {
+    font-size: 20px;
+    font-weight: bold;
 }
 
 img {
