--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,11 @@ h2 {
     font-weight: bold;
 }
 
+.footer {
+    justify-content: center;
+    align-items: center;
+}
+
 img {
     width: 150px;
     height: 150px;
